fixed footer from covering page

--- a/style.css
+++ b/style.css
@@ -12,18 +12,17 @@ header{
     align-items: center;
     height: 13vh;
     font-size: 7vh;
-    left: 0;
-    right: 0;
+    width: 100%;
 }
 footer{
     background-color: var(--hf-color);
     color: var(--hf-text);
     border: solid var(--border);
     height: 13vh;
-    position: fixed;
+    position: absolutes;
     bottom: 0;
-    left: 0;
-    right: 0;
+    width: 100%;
+    height: 2.5rem;
 }
 
 body{
@@ -38,6 +37,14 @@ hr{
     opacity: .4;
 }
 
+#pagecontainer{
+    position:relative;
+    min-height: 100vh;
+}
+
+#content-wrap {
+    padding-bottom: 2.5rem;
+}
 
 .statement{
     margin: 2vh;
